--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "particles.js": "^2.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
